--- a/app/src/main/res/layout/activity_images.xml
+++ b/app/src/main/res/layout/activity_images.xml
@@ -4,5 +4,6 @@
     android:layout_height="match_parent">
 <ListView android:id="@+id/lvImage"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"></ListView>
+    android:layout_height="wrap_content"
+    android:choiceMode="multipleChoice"></ListView>
 </LinearLayout>
