--- a/arthur/src/main/res/layout/activity_main.xml
+++ b/arthur/src/main/res/layout/activity_main.xml
@@ -1,10 +1,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_world" />
+
+        <Button
+            android:id="@+id/btnImages"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onImagesClick"
+            android:text="Images" />
+
+        <Button
+            android:id="@+id/btnVideos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onVideosClick"
+            android:text="Videos" />
+
+        <Button
+            android:id="@+id/btnAudios"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onAudiosClick"
+            android:text="Audios" />
+    </LinearLayout>
 </RelativeLayout>
