--- a/arthur/src/main/res/layout/folder_item_view.xml
+++ b/arthur/src/main/res/layout/folder_item_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@drawable/border"
     android:orientation="vertical">
 
@@ -9,7 +9,7 @@
         android:id="@+id/txtFolderName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical" />
+        android:layout_gravity="center" />
 
 
     <!--<TableLayout-->
