--- a/arthur/src/main/res/layout/activity_images.xml
+++ b/arthur/src/main/res/layout/activity_images.xml
@@ -3,9 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <GridView android:id="@+id/imagesContainer"
-        android:layout_width="fill_parent" android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:numColumns="auto_fit"
-        android:columnWidth="150dp"
+        android:columnWidth="160dp"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:gravity="center"
