--- a/arthur/src/main/res/layout/folder_item_view.xml
+++ b/arthur/src/main/res/layout/folder_item_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="120dip"
+    android:layout_height="160dip"
     android:background="@drawable/border"
     android:orientation="vertical">
 
@@ -10,53 +10,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
-
-
-    <!--<TableLayout-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="fill_parent"-->
-    <!--android:layout_gravity="center_horizontal|center_vertical">-->
-
-    <!--<TableRow>-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/imgOne"-->
-    <!--android:background="@android:color/holo_red_light" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/imgTwo"-->
-    <!--android:background="@android:color/holo_blue_bright" />-->
-    <!--</TableRow>-->
-
-    <!--<TableRow>-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/imgThree"-->
-    <!--android:background="@android:color/holo_red_light" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/imgFour"-->
-    <!--android:background="@android:color/holo_blue_bright" />-->
-    <!--</TableRow>-->
-    <!--</TableLayout>-->
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:background="@android:color/holo_red_dark"
         android:orientation="horizontal">
-
         <ImageView
             android:id="@+id/imgOne"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_width="60dip"
+            android:layout_height="60dip"
             android:layout_weight="1"
             android:gravity="center_horizontal" />
-
         <ImageView
             android:id="@+id/imgTwo"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_width="60dip"
+            android:layout_height="60dip"
             android:layout_weight="1"
             android:gravity="center_horizontal" />
     </LinearLayout>
@@ -65,20 +33,17 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:background="@android:color/holo_blue_bright"
         android:orientation="horizontal">
-
         <ImageView
             android:id="@+id/imgThree"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_width="60dip"
+            android:layout_height="60dip"
             android:layout_weight="1"
             android:gravity="center_horizontal" />
-
         <ImageView
             android:id="@+id/imgFour"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_width="60dip"
+            android:layout_height="60dip"
             android:layout_weight="1"
             android:gravity="center_horizontal" />
     </LinearLayout>
