--- a/arthur/src/main/res/layout/activity_images.xml
+++ b/arthur/src/main/res/layout/activity_images.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    <!--<GridView android:id="@+id/imagesContainer"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:numColumns="auto_fit"-->
+        <!--android:columnWidth="140dp"-->
+        <!--android:verticalSpacing="40dp"-->
+        <!--android:horizontalSpacing="40dp"-->
+        <!--android:gravity="center"-->
+        <!--android:stretchMode="columnWidth"/>-->
     <GridView android:id="@+id/imagesContainer"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:numColumns="auto_fit"
-        android:columnWidth="160dp"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
+        android:columnWidth="96dp"
+        android:stretchMode="columnWidth"
         android:gravity="center"
-        android:stretchMode="columnWidth"/>
+        />
 </LinearLayout>
