--- a/arthur/src/main/res/layout/image_item_view.xml
+++ b/arthur/src/main/res/layout/image_item_view.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-<ImageView android:id="@+id/imgThumb"
-    android:layout_gravity="center"
-    android:layout_width="120dip"
-    android:layout_height="160dip" />
+    android:layout_height="wrap_content"
+    android:gravity="center">
+<!--<ImageView android:id="@+id/imgThumb"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:layout_width="120dp"-->
+    <!--android:layout_height="160dp" />-->
+    <ImageView android:id="@+id/imgThumb"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:background="@android:color/holo_red_dark"
+        />
 </LinearLayout>
