--- a/arthur/src/main/res/layout/image_item_view.xml
+++ b/arthur/src/main/res/layout/image_item_view.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center">
+    android:layout_height="wrap_content">
 <!--<ImageView android:id="@+id/imgThumb"-->
     <!--android:layout_gravity="center"-->
     <!--android:layout_width="120dp"-->
     <!--android:layout_height="160dp" />-->
     <ImageView android:id="@+id/imgThumb"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="@dimen/image_thumbnail_width"
+        android:layout_height="@dimen/image_thumbnail_height"
+        android:scaleType="center"
         android:background="@android:color/holo_red_dark"
         />
 </LinearLayout>
